# codebrowser

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  FindWoboq.cmake.in  LICENSE  README  README.md  global.h
cmake/modules/: FindClang.cmake  FindLLVM.cmake
data/: codebrowser.js  common.css  common.js  indexscript.js  indexstyle.css  kdevelop.css  qtcreator.css  solarized.css  symbol.html
data/jquery/: jquery-ui.css  jquery-ui.min.js
data/jquery/js/: jquery-ui-1.8.23.custom.min.js
generator/: CMakeLists.txt  annotator.cpp  annotator.h  browserastvisitor.h  commenthandler.cpp  commenthandler.h  compat.h  compilercompat.h  embedded_includes.h.in  filesystem.cpp  filesystem.h  generator.cpp  generator.h  inlayhintannotator.cpp  inlayhintannotator.h  main.cpp  preprocessorcallback.cpp  preprocessorcallback.h  projectmanager.cpp  projectmanager.h  projectmanager_systemprojects.cpp.in  qtsupport.cpp  qtsupport.h  stringbuilder.h
indexgenerator/: CMakeLists.txt  indexer.cpp
patches/: 0001-Add-a-hook-in-the-ASTConsumer-to-be-able-to-skip-fun.patch  master.patch
scripts/: fake_compiler.sh  runner.py  woboq_cc.js
tests/: CMakeLists.txt  doc.h  test.cc  testqt.cc
